--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="overlay"></div>
             <h2>State Flower: Nageswar (Mesua ferrea)</h2>
           </div>
-          <div class="elem" data-image="https://tripuratourism.gov.in/images/symbols/fruit1.jpg">
+          <div class="elem" data-image="./Images/state-fruit.png">
             <div class="overlay"></div>
             <h2>State Fruit: Queen Pineapple (Ananas comosus)</h2>
           </div>
