--- a/index.html
+++ b/index.html
@@ -1,82 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div id="fixed-image"></div>
-  <div id="main">
-    <div id="nav">
-      <h1>voyage</h1>
-    </div>
-    <div id="center">
-      <div id="content">
-        <img src="./Images/BeautiesofTripura.png" alt="">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css"
+    />
+  </head>
+  <body>
+    <div id="fixed-image"></div>
+    <div id="main">
+      <div id="nav">
+        <h1>voyage</h1>
       </div>
-    </div>
-    <div id="scoller">
-      <div id="container">
-        <video autoplay loop muted src="./Videos/Vid1.mp4"></video>
-      <video autoplay loop muted src="./Videos/Vid2.mp4"></video>
-      <img src="./Images/Unakoti.jpg" alt="">
-      <video autoplay loop muted src="./Videos/Vid4.mp4"></video>
-      <img style="object-position: center;" src="./Images/Ujyanta Place.jpg" alt="">
-      <img src="./Images/Neer_Mahal.jpg" alt="">
+      <div id="center">
+        <div id="content">
+          <img src="./Images/BeautiesofTripura.png" alt="" />
+        </div>
       </div>
-      <div id="container">
-        <video autoplay loop muted src="./Videos/Vid1.mp4"></video>
-      <video autoplay loop muted src="./Videos/Vid2.mp4"></video>
-      <img src="./Images/Unakoti.jpg" alt="">
-      <video autoplay loop muted src="./Videos/Vid4.mp4"></video>
-      <img style="object-position: center;" src="./Images/Ujyanta Place.jpg" alt="">
-      <img src="./Images/Neer_Mahal.jpg" alt="">
+      <div id="scoller">
+        <div id="container">
+          <img src="./Images/dumboor.png" alt="" />
+          <img src="./Images/Venuban Vihar.jpg" alt="" />
+          <img src="./Images/Unakoti.jpg" alt="" />
+          <img
+            style="object-position: center"
+            src="./Images/tripura sundari.jpg"
+            alt=""
+          />
+          <img
+            style="object-position: center"
+            src="./Images/Ujyanta Place.jpg"
+            alt=""
+          />
+          <img src="./Images/Neer_Mahal.jpg" alt="" />
+        </div>
+        <div id="container">
+          <img src="./Images/dumboor.png" alt="" />
+          <img src="./Images/Venuban Vihar.jpg" alt="" />
+          <img src="./Images/Unakoti.jpg" alt="" />
+          <img
+            style="object-position: center"
+            src="./Images/tripura sundari.jpg"
+            alt=""
+          />
+          <img
+            style="object-position: center"
+            src="./Images/Ujyanta Place.jpg"
+            alt=""
+          />
+          <img src="./Images/Neer_Mahal.jpg" alt="" />
+        </div>
       </div>
-    </div>
-    <div id="page2">
-      <div id="page2-part1">
-        <h1>origin and history <img src="./Images/scroll.png" alt=""></h1>
-      </div>
-      <div id="page2-part2">
-        <div id="part2-img"><img src="./Images/history.png" alt=""></div>
-        <div id="part2-txt"><p>The origin of the name of Tripura is still a matter of controversy among historians and researchers. According to the 'Rajmala", Tripura’s celebrated court chronicle, an ancient king named 'tripur' ruled over the territorial domain known as 'Tripura' and the name of the kingdom was derived from his name.
-          <br>
-          <br>
-          Many researchers explain the name 'Tripura' from its etymological origin: the word 'Tripura' is a compound of two separate words, 'tui' (water) + 'pra' (near) which in totality means 'near water'. The geographical location of the state with it's close proximity to the vast water resources of eastern Bengal coupled with the generic identity of the state's original inhabitants as 'Tipra' or 'Twipra' apparently justify this explanation of the State's name.</p></div>
-      </div>
-    </div>
-    <div id="page3">
-      <div id="page3-part1">
-        <h1>state symbols <img src="./Images/book.png" alt=""></h1>
-      </div>
-      <div id="page3-part2">
-        <div id="elem-container">
-          <div class="elem" data-image="https://tripuratourism.gov.in/images/symbols/animal.jpg">
-            <div class="overlay"></div>
-            <h2>state animal: Phayre's Langur (Trachypithecus phayrei)</h2>
-          </div>
-          <div class="elem" data-image="https://tripuratourism.gov.in/images/symbols/bird.jpg">
-            <div class="overlay"></div>
-            <h2>State Bird: Green Imperial Pigeon (Ducula aenea)</h2>
-          </div>
-          <div class="elem" data-image="https://tripuratourism.gov.in/images/symbols/tree.png">
-            <div class="overlay"></div>
-            <h2>State Tree: Agar (Aquilaria malaccensis)</h2>
-          </div>
-          <div class="elem" data-image="https://tripuratourism.gov.in/images/symbols/flower.jpg">
-            <div class="overlay"></div>
-            <h2>State Flower: Nageswar (Mesua ferrea)</h2>
-          </div>
-          <div class="elem" data-image="./Images/state-fruit.png">
-            <div class="overlay"></div>
-            <h2>State Fruit: Queen Pineapple (Ananas comosus)</h2>
+      <div id="page2">
+        <div id="page2-part1">
+          <h1>origin and history <img src="./Images/scroll.png" alt="" /></h1>
+        </div>
+        <div id="page2-part2">
+          <div id="part2-img"><img src="./Images/history.png" alt="" /></div>
+          <div id="part2-txt">
+            <p>
+              The origin of the name of Tripura is still a matter of controversy
+              among historians and researchers. According to the 'Rajmala",
+              Tripura’s celebrated court chronicle, an ancient king named
+              'tripur' ruled over the territorial domain known as 'Tripura' and
+              the name of the kingdom was derived from his name.
+              <br />
+              <br />
+              Many researchers explain the name 'Tripura' from its etymological
+              origin: the word 'Tripura' is a compound of two separate words,
+              'tui' (water) + 'pra' (near) which in totality means 'near water'.
+              The geographical location of the state with it's close proximity
+              to the vast water resources of eastern Bengal coupled with the
+              generic identity of the state's original inhabitants as 'Tipra' or
+              'Twipra' apparently justify this explanation of the State's name.
+            </p>
           </div>
         </div>
       </div>
+      <div id="page3">
+        <div id="page3-part1">
+          <h1>state symbols <img src="./Images/book.png" alt="" /></h1>
+        </div>
+        <div id="page3-part2">
+          <div id="elem-container">
+            <div
+              class="elem"
+              data-image="https://tripuratourism.gov.in/images/symbols/animal.jpg"
+            >
+              <div class="overlay"></div>
+              <h2>state animal: Phayre's Langur (Trachypithecus phayrei)</h2>
+            </div>
+            <div
+              class="elem"
+              data-image="https://tripuratourism.gov.in/images/symbols/bird.jpg"
+            >
+              <div class="overlay"></div>
+              <h2>State Bird: Green Imperial Pigeon (Ducula aenea)</h2>
+            </div>
+            <div
+              class="elem"
+              data-image="https://tripuratourism.gov.in/images/symbols/tree.png"
+            >
+              <div class="overlay"></div>
+              <h2>State Tree: Agar (Aquilaria malaccensis)</h2>
+            </div>
+            <div
+              class="elem"
+              data-image="https://tripuratourism.gov.in/images/symbols/flower.jpg"
+            >
+              <div class="overlay"></div>
+              <h2>State Flower: Nageswar (Mesua ferrea)</h2>
+            </div>
+            <div
+              class="elem"
+              data-image="https://tripuratourism.gov.in/images/symbols/fruit1.jpg"
+            >
+              <div class="overlay"></div>
+              <h2>State Fruit: Queen Pineapple (Ananas comosus)</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="page4">
+        <img src="./Images/footer-bg.png" alt="" />
+      </div>
     </div>
-  </div>
-  <script src="script.js"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
+    <script src="script.js"></script>
+  </body>
 </html>
